# Olifant

./: .dir-locals.el  .dockerignore  .gitignore  .stylish-haskell.yaml  .travis.yml  .watsonrc  Dockerfile  Issues.org  LICENSE  LLVM.org  Makefile  Olifant.cabal  README.md  stack.yaml
app/: Main.hs
docs/: Notes.org  Plan.org  Types.org
examples/: .gitignore  Makefile  README.org  sum.ol  vars.ol
exe/: CLI.hs
llvm-examples/: hello.c
runtime/: Makefile  olifant.c
samples/: 1+2.lc
src/: Olifant.hs
src/Olifant/: Calculus.hs  Compiler.hs  Core.hs  Gen.hs  Parser.hs  Pretty.hs
test/: Test.hs
test/Test/: Compiler.hs  Gen.hs  Parser.hs  global.ll  id.ll
test/ll/: const.ll  global.ll  id.ll  shadow.ll  sum.ll
