name:                Olifant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jaseemabid/Olifant#readme
license:             BSD3
license-file:        LICENSE
author:              Jaseem Abid
maintainer:          jaseemabid@gmail.com
copyright:           MiT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Olifant
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , llvm-hs
                     , llvm-hs-pure
                     , llvm-hs-pretty
                     , mtl
                     , tasty
                     , tasty-hunit
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable olifant
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Olifant
  default-language:    Haskell2010

test-suite Olifant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       Olifant
                     , base
                     , tasty
                     , tasty-hunit
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jaseemabid/Olifant
